--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body, h1, h2, p, ul, li {
 header {
     background-color: var(--deep-blush); /* Cambiato lo sfondo in deep-blush */
     text-align: center;
-    padding: 20px 0;
+    padding: 40px 0; /* Aumentate le dimensioni del padding */
 }
 
 header img {
@@ -23,11 +23,12 @@ nav ul {
 
 nav ul li {
     display: inline;
-    margin-right: 20px;
+    margin-right: 30px; /* Aumentato lo spazio tra gli elementi del menu */
 }
 
 nav ul li a {
     text-decoration: none;
     color: var(--jon); /* Colore del testo cambiato in jon */
     font-weight: bold;
+    font-size: 18px; /* Aumentata la dimensione del testo */
 }
